--- a/app/src/main/res/layout/fragment_anime_selected.xml
+++ b/app/src/main/res/layout/fragment_anime_selected.xml
@@ -108,81 +108,87 @@
                 android:orientation="vertical"
                 app:layout_constraintTop_toTopOf="@id/ratings_container">
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/animeCardViewTitle"
+                <LinearLayout
+                    android:id="@+id/static_content"
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_marginTop="34dp"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    tools:text="Code Geass: Lelouch the Rebellion" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/animeCardViewSubTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_marginVertical="7dp"
-                    tools:text="A high-schooler who's granted powers to make anyone instantly obedient dons a mask to lead Japan's rebellion against a long-invading Britannia." />
-
-                <View
-                    android:id="@+id/animeCardViewLine"
-                    android:layout_width="match_parent"
-
-                    android:layout_height="0.5dp"
-                    android:layout_marginHorizontal="15dp"
-                    android:background="@color/grey_pressed" />
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/animeCardReleaseDateImageView"
-                        android:layout_width="18dp"
-                        android:layout_height="18dp"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginTop="9dp"
-                        android:layout_marginEnd="5dp"
-                        android:src="@drawable/calendar"
-                        android:tint="@color/orange_anime_list_icons" />
+                    android:layout_height="match_parent">
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/animeCardViewTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="15dp"
+                        android:layout_marginTop="34dp"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"
+                        tools:text="Code Geass: Lelouch the Rebellion" />
 
                     <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/animeCardReleaseDateTextView"
+                        android:id="@+id/animeCardViewSubTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="15dp"
+                        android:layout_marginVertical="7dp"
+                        tools:text="A high-schooler who's granted powers to make anyone instantly obedient dons a mask to lead Japan's rebellion against a long-invading Britannia." />
+
+                    <View
+                        android:id="@+id/animeCardViewLine"
+                        android:layout_width="match_parent"
+
+                        android:layout_height="0.5dp"
+                        android:layout_marginHorizontal="15dp"
+                        android:background="@color/grey_pressed" />
+
+                    <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:layout_marginStart="5dp"
+                        android:orientation="horizontal">
 
-                        tools:text="12-12-1988" />
-                </androidx.appcompat.widget.LinearLayoutCompat>
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/animeCardReleaseDateImageView"
+                            android:layout_width="18dp"
+                            android:layout_height="18dp"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginTop="9dp"
+                            android:layout_marginEnd="5dp"
+                            android:src="@drawable/calendar"
+                            android:tint="@color/orange_anime_list_icons" />
 
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/animeCardReleaseDateTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:layout_marginStart="5dp"
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/animeCardViewAmountOfTimeImageView"
-                        android:layout_width="18dp"
-                        android:layout_height="18dp"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginTop="9dp"
-                        android:layout_marginEnd="5dp"
-                        android:src="@drawable/clock"
-                        android:tint="@color/orange_anime_list_icons" />
+                            tools:text="12-12-1988" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
 
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/animeCardViewAmountOfTimeTextView"
+                    <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:layout_marginStart="5dp"
+                        android:orientation="horizontal">
 
-                        tools:text="24 ep" />
-                </androidx.appcompat.widget.LinearLayoutCompat>
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/animeCardViewAmountOfTimeImageView"
+                            android:layout_width="18dp"
+                            android:layout_height="18dp"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginTop="9dp"
+                            android:layout_marginEnd="5dp"
+                            android:src="@drawable/clock"
+                            android:tint="@color/orange_anime_list_icons" />
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/animeCardViewAmountOfTimeTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:layout_marginStart="5dp"
+
+                            tools:text="24 ep" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+                </LinearLayout>
 
                 <com.google.android.material.tabs.TabLayout
                     android:id="@+id/pager_tabs"
