--- a/app/src/main/res/layout/fragment_anime_selected.xml
+++ b/app/src/main/res/layout/fragment_anime_selected.xml
@@ -227,7 +227,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:background="@color/orange"
-                    android:gravity="bottom|center_horizontal"
+                    android:gravity="center_vertical|center_horizontal"
                     android:orientation="vertical">
 
                     <TextView
