--- a/app/src/main/res/layout/list_item_anime_episode.xml
+++ b/app/src/main/res/layout/list_item_anime_episode.xml
@@ -12,26 +12,29 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/epImage"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
             android:src="@drawable/apple_logo"
-            android:scaleType="centerCrop"
+            android:scaleType="centerInside"
 
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/firstLinLayout"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/firstLinLayout"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/firstLinLayout"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="100dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
+
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/epImage">
+            app:layout_constraintStart_toEndOf="@id/epImage"
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/seasonEpisodeTextView"
