--- a/app/src/main/res/layout/list_item_anime_episode.xml
+++ b/app/src/main/res/layout/list_item_anime_episode.xml
@@ -53,6 +53,8 @@
                 style="@style/mainTitleEpList"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="Title" />
 
             <com.google.android.material.textview.MaterialTextView
