--- a/app/src/main/res/layout/fragment_anime_selected.xml
+++ b/app/src/main/res/layout/fragment_anime_selected.xml
@@ -92,9 +92,7 @@
                         app:layout_constraintStart_toEndOf="@id/animeCardViewRating"
                         app:layout_constraintTop_toTopOf="@id/animeCardViewRatingStarImageView"
                         tools:text="(6.7 million Views)" />
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -108,9 +106,10 @@
 
                 <LinearLayout
                     android:id="@+id/static_content"
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/animeCardViewTitle"
                         android:layout_width="match_parent"
@@ -200,8 +199,7 @@
                     android:id="@+id/pager"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:gravity="center_vertical|center_horizontal">
-                </androidx.viewpager2.widget.ViewPager2>
+                    android:gravity="center_vertical|center_horizontal"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
@@ -210,8 +208,8 @@
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
         android:indeterminate="true"
-        android:indeterminateTint="@color/orange"
-        android:layout_gravity="center_horizontal|center_vertical" />
+        android:indeterminateTint="@color/orange" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
